@@ -1,3 +1,10 @@
+2011-02-02  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Build fixes for wxWebKit.
+
+        * wtf/wx/StringWx.cpp:
+        (WTF::String::String):
+
 2011-02-01  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
